assets/home/style/home.css
html {
  font-family: 'Open Sans', sans-serif;
  scroll-behavior: smooth;
}
.justify-items-center {
  justify-items: center;
}
h1 {
  font-size: 26pt;
}
.vh-60 {
  height: 60vh;
}
.vh-40 {
  height: 40vh;
}
h2 {
  font-weight: 600;
  text-decoration: underline;
  text-align: center;
}
a {
  text-decoration: none;
  color: black;
}
#header-carousel-inner {
  max-height: 80vh;
}
#header-carousel-item {
  height: 80vh;
}
#header-carousel-inner > .carousel-item > img{
  max-width: 100%;
  object-fit: cover;
  object-position: center bottom;
}
.more-button {
  height: 2.2rem;
  width: 2.2rem;
  border-radius: 50%;
}
.more-button img:hover {
  color: #fff;
}
.container {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  gap: 15px;
  grid-auto-flow: row;
  grid-template-areas:
    'sponsor'
    'vision' 
    'mission';
}

.blend-soft-light {
  mix-blend-mode: soft-light;
}
.sponsor {
  grid-area: sponsor;
}

.vision {
  grid-area: vision;
}

.mission {
  grid-area: mission;
}
section {
  border-bottom: 2px black;
}

.our-text-container {
  height: 10.5rem;
}
/* Rectangle 1 */

#rectangle1 {
  position: absolute;
  width: 743px;
  height: 930px;
  left: 1527px;
  top: 0px;

  background: linear-gradient(
    89.96deg,
    #eccb75 3.21%,
    #bfce79 47.11%,
    #92cd63 74.57%
  );
  transform: matrix(-1, 0, 0, 1, 0, 0);
}

#insight .more {
  display: none;
}
.bg-gradient-green-orange {
  background: linear-gradient(-90deg, #ECCB75 3.21%, #BFCE79 47.11%, #92CD63 74.57%);
}
.youtube-article {
  width: 300px;
}
#re-cast {
  background: url("/assets/home/img/re-cast-bg.png"), linear-gradient(-90deg, #ECCB75 3.21%, #BFCE79 47.11%, #92CD63 74.57%);
  background-blend-mode: soft-light;
  background-position: center; /* Center the image */
  background-repeat: no-repeat; /* Do not repeat the image */
  background-size: cover; /* Resize the background image to cover the entire container */
}

.footer {
  height: 280px;
  background-image: url("/assets/about/img/footer-background.png");
  background-color: #bfce79;
  color: #656e3d;
  background-position: center; /* Center the image */
  background-repeat: no-repeat; /* Do not repeat the image */
  background-size: cover; /* Resize the background image to cover the entire container */
}

.linkOut {
  color: inherit;
}
.linkOut:hover {
  cursor: nesw-resize;
  color: #acb48b;
}

.embla {
  overflow: hidden;
  max-width: 90vw;
}
.embla__container {
  display: flex;
}
.embla__slide {
  position: relative;
  flex: 0 0;
  max-width: 100%;
  margin-right: 20px;
}
#sre-insight-carousel {
  width: 24ch;
}
#sre-insight-container > div {
  width: 24ch;
}
#sre-insight-container > div > img {
  height:24ch;
  width: 24ch;
}

.rounded-corners {
  border-radius: 10px;
}
@media (min-width: 992px) {
  .container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 15px 35px;
    grid-auto-flow: row;
    grid-template-areas:
      'sponsor sponsor'
      'vision mission';
  }

  #header-img-carousel {
    width: 50vw;
    height: 100vh;
  }

  #header-carousel-inner {
    width: 50vw;
    height: 100vh;
    max-height: 100vh;
  }
  #header-carousel-item {
    height: 100vh;
  }
  #header-carousel-inner > .carousel-item {
    max-height: 100%;
  }
  #header-carousel-img{
    object-fit: none;
    object-position: center;
    vertical-align: bottom;
  }

  .sponsor {
    grid-area: sponsor;
  }

  .vision {
    grid-area: vision;
  }

  .mission {
    grid-area: mission;
  }

  .h-lg-100 {
    height: 100%;
  }

  .h-max-160px {
    max-height: 160px;
    width: auto;
  }
  #insight .more {
    display: block;
  }
  .carousel-item.d-lg-block {
    position: unset;
    display: block;
  }
}

